[tool.poetry]
name = "Crypto exchange"
version = "1.0.0"
description = ""
authors = ["Vasiliy Kovalev wintrnite@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.32"
Flask = "^2.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-deadfixtures = "^2.2.1"
types-requests = "^2.27.15"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
